src/test/ui/feature-gates/feature-gate-lang-items.stderr
error[E0658]: language items are subject to change
  --> $DIR/feature-gate-lang-items.rs:1:1
   |
LL | #[lang = "foo"]
   | ^^^^^^^^^^^^^^^
   |
   = help: add #![feature(lang_items)] to the crate attributes to enable

error[E0522]: definition of an unknown language item: `foo`
  --> $DIR/feature-gate-lang-items.rs:1:1
   |
LL | #[lang = "foo"]
   | ^^^^^^^^^^^^^^^ definition of unknown language item `foo`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0522, E0658.
For more information about an error, try `rustc --explain E0522`.
