src/test/ui/feature-gates/feature-gate-lang-items.rs
#[lang="foo"]   //~ ERROR language items are subject to change
trait Foo {}

fn main() {
}
